--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,72 +1,44 @@
-{% extends 'base.html.twig' %}
+{% extends 'bundles/EasyAdminBundle/page/login.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block page_title %}Вход{% endblock %}
 
-{% block styles %}
-    {{ parent() }}
-    body {
-        margin: 0;
-        padding: 0;
-        background-color: #17a2b8;
-        height: 100vh;
-    }
-    #login .container #login-row #login-column #login-box {
-        margin-top: 20px;
-        max-width: 600px;
-        height: 320px;
-        border: 1px solid #9C9C9C;
-        background-color: #EAEAEA;
-    }
-    #login .container #login-row #login-column #login-box #login-form {
-        padding: 20px;
-    }
-    #login .container #login-row #login-column #login-box #login-form #register-link {
-        margin-top: -85px;
-    }
-{% endblock %}
+{% block header_logo %}BackPackers{% endblock %}
 
-{% block body %}
-    <section>
-        <div id="login">
-            <h3 class="text-center text-white pt-5">BackPackers</h3>
-            <div class="container">
-                <div id="login-row" class="row justify-content-center align-items-center">
-                    <div id="login-column" class="col-md-6">
-                        <div id="login-box" class="col-md-12">
-                            <form id="login-form" class="form" action="" method="post">
-                                <h3 class="text-center text-info">Вход</h3>
-                                {% if error %}
-                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                {% endif %}
+{% block form %}
+    <section class="content">
+        <form method="post" action="{{ action|default('') }}">
+            <input type="hidden" name="_csrf_token"
+                   value="{{ csrf_token('authenticate') }}"
+            >
 
-                                {% if app.user %}
-                                    <div class="mb-3">
-                                        You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-                                    </div>
-                                {% endif %}
-                                <div class="form-group">
-                                    <label for="email" class="text-info">Email:</label><br>
-                                    <input type="email" name="email" id="inputEmail" class="form-control" required autofocus>
-                                </div>
-                                <div class="form-group">
-                                    <label for="password" class="text-info">Пароль:</label><br>
-                                    <input type="text" name="password" id="inputPassword" class="form-control" required>
-                                </div>
-                                <input type="hidden" name="_csrf_token"
-                                       value="{{ csrf_token('authenticate') }}"
-                                >
-                                <div class="form-group">
-                                    <label for="remember-me" class="text-info"><span>Запомнить меня</span> <span><input id="remember-me" name="_remember_me" type="checkbox"></span></label><br>
-                                    <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
-                                </div>
-                                <div id="register-link" class="text-right">
-                                    <a href="#" class="text-info">Регистрация</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+            <input type="hidden" name="{{ target_path_parameter|default('_target_path') }}" value="{{ target_path|default(ea is defined ? path(ea.dashboardRouteName) : '/') }}" />
+
+            <div class="form-group field-text">
+                <label for="username" class="sr-only form-control-label required">{{ _username_label }}</label>
+                <div class="form-widget form-widget-with-icon">
+                    <i class="fa fa-fw fa-user"></i>
+                    <input type="email" name="email" id="inputEmail" class="form-control" required autofocus>
                 </div>
             </div>
-        </div>
+
+            <div class="form-group field-password">
+                <label for="password" class="sr-only form-control-label required">{{ _password_label }}</label>
+                <div class="form-widget form-widget-with-icon">
+                    <i class="fa fa-fw fa-lock"></i>
+                    <input type="password" name="password" id="inputPassword" class="form-control" required>
+                </div>
+            </div>
+
+            <div class="form-group field-button">
+                <button type="submit" class="btn btn-primary btn-lg btn-block">{{ _sign_in_label }}</button>
+            </div>
+        </form>
+
+        <script type="text/javascript">
+            const loginForm = document.querySelector('form');
+            loginForm.addEventListener('submit', () => {
+                loginForm.querySelector('button[type="submit"]').setAttribute('disabled', 'disabled');
+            }, false);
+        </script>
     </section>
 {% endblock %}
